<resources>
    <string name="app_name">Inventory App</string>

    <!-- ProductEditor label - add product mode -->
    <string name="product_editor_add_mode">Add product</string>

    <!-- ProductEditor label - edit product mode -->
    <string name="product_editor_edit_mode">Edit product</string>

    <!-- ProductEditor menu save -->
    <string name="product_editor_menu_save">Save</string>

    <!-- ProductEditor menu delete -->
    <string name="product_editor_menu_delete">Delete</string>

    <!-- EmptyListImage credits -->
    <string name="empty_list_image_credit">Created by Narukistudio - Freepik.com</string>

    <!-- EmptyListImage description -->
    <string name="empty_list_image_description">Warehouse</string>

    <!-- EmptyListText -->
    <string name="empty_list_text">No product on the list! \nPlease click button on bottom right to add a new product.</string>

    <!-- List item SALE button description -->
    <string name="sale_button">Sale</string>

    <!-- ProductEditor main heading -->
    <string name="product_editor_main_heading">Basic product information</string>

    <!-- ProductEditor product name -->
    <string name="product_editor_name">Name</string>

    <!-- ProductEditor product name hint -->
    <string name="product_editor_name_hint">Product name</string>

    <!-- ProductEditor product price -->
    <string name="product_editor_price">Price</string>

    <!-- ProductEditor product price hint -->
    <string name="product_editor_price_hint">Product price</string>

    <!-- ProductEditor product in stock -->
    <string name="product_editor_in_stock">In stock</string>

    <!-- ProductEditor product in stock hint -->
    <string name="product_editor_in_stock_hint">Quantity in stock</string>

    <!-- ProductEditor product supplier heading -->
    <string name="product_editor_product_supplier_heading">Supplier data</string>

    <!-- ProductEditor supplier name -->
    <string name="product_editor_supplier_name">Name</string>

    <!-- ProductEditor supplier name hint -->
    <string name="product_editor_supplier_name_hint">Supplier name</string>

    <!-- ProductEditor supplier e-mail -->
    <string name="product_editor_supplier_email">E-mail</string>

    <!-- ProductEditor supplier e-mail hint -->
    <string name="product_editor_supplier_email_hint">Supplier e-mail</string>

    <!-- ProductEditor change quantity heading -->
    <string name="product_editor_quantity_change_heading">Change quantity of product in stock</string>

    <!-- ProductEditor quantity increase -->
    <string name="product_editor_quantity_increase">Increase quantity</string>

    <!-- ProductEditor quantity decrease -->
    <string name="product_editor_quantity_decrease">Decrease quantity</string>

    <!-- ProductEditor image of product heading -->
    <string name="product_editor_image_heading">Product image</string>

    <!-- ProductEditor image add text -->
    <string name="product_editor_image_add_text">Press button to add image</string>

    <!-- ProductEditor image add button description-->
    <string name="product_editor_image_add_button">Add image</string>

    <!-- ProductEditor image description -->
    <string name="product_editor_image_desc">Product image</string>

    <!-- ProductEditor supplier order text -->
    <string name="product_editor_order_text">Press button to make an order</string>

    <!-- ProductEditor supplier order button description -->
    <string name="product_editor_order_button">Order</string>

    <!-- TOASTs validation messages -->
    <!-- ProductCursorAdapter - when user tries to click SELL button when quantity is 0 -->
    <string name="toast_quantity_is_zero">Cannot sell item. It\'s 0 in stock.</string>

    <!-- EditorActivity - when user tries to click on "-" button, in edit mode, to decrease quantity when it's 0 -->
    <string name="toast_quantity_is_zero_editor_mode">Quantity in stock cannot be negative. Now it\'s 0.</string>

    <!-- EditorActivity - when user tries to send order to supplier but was error during db query or email is empty -->
    <string name="toast_order_blank_email">E-mail address cannot be empty.</string>

    <!-- AlertDialog messages -->
    <!-- AlertDialog body message -->
    <string name="alert_dialog_message">Do you want to delete this product?</string>

    <!-- AlertDialog confirmation -->
    <string name="alert_dialog_confirmation">Yes</string>

    <!-- AlertDialog dismiss -->
    <string name="alert_dialog_dismiss">No</string>

    <!-- AlertDialogBack body message -->
    <string name="alert_dialog_back_message">You have unsaved changes, do you want to dismiss?</string>

    <!-- AlertDialogBack confirmation -->
    <string name="alert_dialog_back_confirmation">Yes</string>

    <!-- AlertDialogBack dismiss -->
    <string name="alert_dialog_back_dismiss">No</string>
</resources>
