<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ProductEditorScrollView"
    tools:context="pl.bartekpawlowski.inventoryapp.EditorActivity">

    <LinearLayout style="@style/ProductEditorContainer">

        <TextView
            style="@style/ProductEditorHeading"
            android:text="@string/product_editor_main_heading" />

        <LinearLayout style="@style/ProductEditorItemContainer">

            <TextView
                style="@style/ProductEditorItemTextView"
                android:text="@string/product_editor_name" />

            <EditText
                android:id="@+id/editor_name"
                style="@style/ProductEditorItemEditText"
                android:hint="@string/product_editor_name_hint"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout style="@style/ProductEditorItemContainer">

            <TextView
                style="@style/ProductEditorItemTextView"
                android:text="@string/product_editor_price" />

            <EditText
                android:id="@+id/editor_price"
                style="@style/ProductEditorItemEditText"
                android:hint="@string/product_editor_price_hint"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout style="@style/ProductEditorItemContainer">

            <TextView
                style="@style/ProductEditorItemTextView"
                android:text="@string/product_editor_in_stock" />

            <EditText
                android:id="@+id/editor_qty"
                style="@style/ProductEditorItemEditText"
                android:hint="@string/product_editor_in_stock_hint"
                android:inputType="number" />

        </LinearLayout>

        <TextView
            android:id="@+id/product_editor_quantity_heading"
            style="@style/ProductEditorHeading"
            android:text="@string/product_editor_quantity_change_heading" />

        <LinearLayout
            android:id="@+id/product_editor_quantity_container"
            style="@style/ProductEditorQuantityContainer">

            <ImageButton
                android:id="@+id/editor_decrease"
                style="@style/ProductEditorQuantityButton"
                android:contentDescription="@string/product_editor_quantity_decrease"
                android:onClick="decreaseQuantityByOne"
                android:src="@drawable/ic_minus" />

            <TextView
                android:id="@+id/editor_qty_text_view"
                style="@style/ProductEditorQuantityText"
                tools:text="100" />

            <ImageButton
                android:id="@+id/editor_increase"
                style="@style/ProductEditorQuantityButton"
                android:contentDescription="@string/product_editor_quantity_increase"
                android:onClick="increaseQuantityByOne"
                android:src="@drawable/ic_plus" />

        </LinearLayout>

        <TextView
            style="@style/ProductEditorHeading"
            android:text="@string/product_editor_image_heading" />

        <RelativeLayout style="@style/ProductEditorTextAndImageButtonContainer">

            <TextView
                style="@style/ProductEditorButtonText"
                android:text="@string/product_editor_image_add_text" />

            <ImageButton
                android:id="@+id/editor_add_image"
                style="@style/ProductEditorButton"
                android:contentDescription="@string/product_editor_image_add_button"
                android:onClick="takePhoto"
                android:src="@drawable/ic_camera_retro" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/editor_image_holder"
            style="@style/ProductEditorImageHolder"
            android:contentDescription="@string/product_editor_image_desc" />

        <TextView
            style="@style/ProductEditorHeading"
            android:text="@string/product_editor_product_supplier_heading" />

        <LinearLayout style="@style/ProductEditorItemContainer">

            <TextView
                style="@style/ProductEditorItemTextView"
                android:text="@string/product_editor_supplier_name" />

            <EditText
                android:id="@+id/editor_supplier_name"
                style="@style/ProductEditorItemEditText"
                android:hint="@string/product_editor_supplier_name_hint"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout style="@style/ProductEditorItemContainer">

            <TextView
                style="@style/ProductEditorItemTextView"
                android:text="@string/product_editor_supplier_email" />

            <EditText
                android:id="@+id/editor_supplier_email"
                style="@style/ProductEditorItemEditText"
                android:hint="@string/product_editor_supplier_email_hint"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <RelativeLayout style="@style/ProductEditorTextAndImageButtonContainer">

            <TextView
                style="@style/ProductEditorButtonText"
                android:text="@string/product_editor_order_text" />

            <ImageButton
                android:id="@+id/editor_supplier_order"
                style="@style/ProductEditorButton"
                android:contentDescription="@string/product_editor_order_button"
                android:onClick="sendOrder"
                android:src="@drawable/ic_truck" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
